# aoc-24

./: .gitignore  Cargo.toml
src/: lib.rs
src/template/: day.rs  readme_benchmarks.rs  run_multi.rs  runner.rs  timings.rs
src/template/commands/: time.rs
