[package]
name = "advent_of_code"
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[profile.dev.package."*"]
opt-level = 3
debug = false

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
rayon = "1.10.0"
hashbrown = "0.15.2"
itertools = "0.13.0"
ndarray = "0.16.1"
num = "0.4.3"
petgraph = "0.6.5"


[dev-dependencies]
rstest = "0.23.0"
